# NexaSearch

./: .env.example  app_streamlit.py  cli.py  project_timeline.md  pyproject.toml  raw_data.md  readme.md  sitemap_crawler.py  testing.py
cleaner/: distil_robert.py
data/: nexasearch.db.wal
evals/: evaluator.py
sources/: sources.py
src/chunking/: chunker.py
src/config/: settings.py
src/crawler/: config.py  crawler.py  logger.py  robots.py  sitemap.py  utils.py
src/embedding/: embedder.py
src/pipeline/: orchestrator.py
src/processing/: cleaner.py  deduplication.py  lsh.py
src/quality/: quality_filter.py
src/search/: bm25_index.py  engine.py
src/seeder/: sources.py  url_seeder.py
src/storage/: duckdb_store.py
tests/: test_chunker.py  test_cleaner.py  test_deduplication.py  test_indexing.py  test_lsh.py  test_quality.py
