[project]
name = "Search-Engine"
version = "0.1.0"
description = "Search Engine for a specific domain (AI, Coding, Research Paper)"
readme = "reame.md"
requires-python = ">=3.14"
dependencies = [
    "crawl4ai>=0.9.1",
    "duckdb>=1.5.4",
    "matplotlib>=3.11.1",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.2",
    "transformers>=5.13.0",
    "ultimate-sitemap-parser>=1.8.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
